[metadata]
name = papyrus_scripts
version = 0.0.1-dev
description = "A collection of scripts to handle the Papyrus bioactivity dataset"
long_description = file: README.md
url = ""
author = ""
author_email = ""
maintainer = ""
maintainer_email = ""
license = ""
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
keywords =
    bioactivity data
    QSAR
    proteochemometrics
    cheminformatics
    modelling
    machine learning


[options]
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    numpy
    pandas
    requests
    joblib
    dask
    tqdm
    natsort
    mordred
    swifter
    scikit-learn
    xgboost
    pystow
    gdown
    tabulate
    prodec @ https://github.com/OlivierBeq/ProDEC/tarball/master
    upsetplot @ https://github.com/OlivierBeq/UpSetPlot/tarball/master


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.entry_points]
console_scripts =
    papyrus = papyrus_scripts.cli:main


[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints


testing =
    pytest
