[metadata]
name = papyrus_scripts
version = attr: papyrus_scripts.__version__
description = A collection of scripts to handle the Papyrus bioactivity dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OlivierBeq/Papyrus-scripts
author = Olivier J. M. Béquignon - Brandon J. Bongers - Willem Jespers
author_email = "olivier.bequignon.maintainer@gmail.com"
maintainer = Olivier J. M. Béquignon
maintainer_email = "olivier.bequignon.maintainer@gmail.com"
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
keywords =
    bioactivity data
    QSAR
    proteochemometrics
    cheminformatics
    modelling
    machine learning


[options]
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    numpy
    pandas
    rdkit
    requests
    joblib
    tqdm
    mordred
    swifter
    scikit-learn
    xgboost
    pystow
    prodec


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.entry_points]
console_scripts =
    papyrus = papyrus_scripts.cli:main


[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints


testing =
    pytest
